# zLibC

./: CMakeLists.txt
include/zlibc/adt/: string.h
include/zlibc/file_system/: path.h
lib/: CMakeLists.txt
lib/adt/: CMakeLists.txt  string.c
lib/file_system/: .path.c.swp  CMakeLists.txt  path.c
unit-tests/: CMakeLists.txt
unit-tests/adt/: CMakeLists.txt  test_string.c
unit-tests/file_system/: CMakeLists.txt  test_path.c
